Revert "fixbug:fix two scrollbar"
This reverts commit 87ac68fe4032863335c42f5799b34205105b4e31.

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 html,
 body {
   height: 100%;
-  overflow: hidden;
+  overflow: auto;
 }
 :focus:not(:focus-visible) {
   outline: none;
